v6-graph/graph_generator/gen/PythonParser.py
# Generated from /home/stifler55/Documents/Universidade/Tese/GraphGenerator/Python/src/PythonParser.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class PythonParser ( Parser ):

    grammarFileName = "PythonParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'def'", "'return'", "'raise'", "'from'", "'import'", 
                     "'nonlocal'", "'as'", "'global'", "'assert'", "'if'", 
                     "'elif'", "'else'", "'while'", "'for'", "'in'", "'try'", 
                     "'None'", "'finally'", "'with'", "'except'", "'lambda'", 
                     "'or'", "'and'", "'not'", "'is'", "'class'", "'yield'", 
                     "'del'", "'pass'", "'continue'", "'break'", "'async'", 
                     "'await'", "'print'", "'exec'", "'True'", "'False'", 
                     "'.'", "'...'", "'`'", "'*'", "','", "':'", "';'", 
                     "'**'", "'='", "'|'", "'^'", "'&'", "'<<'", "'>>'", 
                     "'+'", "'-'", "'/'", "'%'", "'//'", "'~'", "'<'", "'>'", 
                     "'=='", "'>='", "'<='", "'<>'", "'!='", "'@'", "'->'", 
                     "'+='", "'-='", "'*='", "'@='", "'/='", "'%='", "'&='", 
                     "'|='", "'^='", "'<<='", "'>>='", "'**='", "'//='", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'('", "')'", 
                     "'{'", "'}'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "INDENT", "DEDENT", "LINE_BREAK", "DEF", 
                      "RETURN", "RAISE", "FROM", "IMPORT", "NONLOCAL", "AS", 
                      "GLOBAL", "ASSERT", "IF", "ELIF", "ELSE", "WHILE", 
                      "FOR", "IN", "TRY", "NONE", "FINALLY", "WITH", "EXCEPT", 
                      "LAMBDA", "OR", "AND", "NOT", "IS", "CLASS", "YIELD", 
                      "DEL", "PASS", "CONTINUE", "BREAK", "ASYNC", "AWAIT", 
                      "PRINT", "EXEC", "TRUE", "FALSE", "DOT", "ELLIPSIS", 
                      "REVERSE_QUOTE", "STAR", "COMMA", "COLON", "SEMI_COLON", 
                      "POWER", "ASSIGN", "OR_OP", "XOR", "AND_OP", "LEFT_SHIFT", 
                      "RIGHT_SHIFT", "ADD", "MINUS", "DIV", "MOD", "IDIV", 
                      "NOT_OP", "LESS_THAN", "GREATER_THAN", "EQUALS", "GT_EQ", 
                      "LT_EQ", "NOT_EQ_1", "NOT_EQ_2", "AT", "ARROW", "ADD_ASSIGN", 
                      "SUB_ASSIGN", "MULT_ASSIGN", "AT_ASSIGN", "DIV_ASSIGN", 
                      "MOD_ASSIGN", "AND_ASSIGN", "OR_ASSIGN", "XOR_ASSIGN", 
                      "LEFT_SHIFT_ASSIGN", "RIGHT_SHIFT_ASSIGN", "POWER_ASSIGN", 
                      "IDIV_ASSIGN", "STRING", "DECIMAL_INTEGER", "OCT_INTEGER", 
                      "HEX_INTEGER", "BIN_INTEGER", "IMAG_NUMBER", "FLOAT_NUMBER", 
                      "OPEN_PAREN", "CLOSE_PAREN", "OPEN_BRACE", "CLOSE_BRACE", 
                      "OPEN_BRACKET", "CLOSE_BRACKET", "NAME", "LINE_JOIN", 
                      "NEWLINE", "WS", "COMMENT" ]

    RULE_root = 0
    RULE_single_input = 1
    RULE_file_input = 2
    RULE_eval_input = 3
    RULE_stmt = 4
    RULE_compound_stmt = 5
    RULE_suite = 6
    RULE_decorator = 7
    RULE_elif_clause = 8
    RULE_else_clause = 9
    RULE_finally_clause = 10
    RULE_with_item = 11
    RULE_except_clause = 12
    RULE_classdef = 13
    RULE_funcdef = 14
    RULE_typedargslist = 15
    RULE_args = 16
    RULE_kwargs = 17
    RULE_def_parameters = 18
    RULE_def_parameter = 19
    RULE_named_parameter = 20
    RULE_simple_stmt = 21
    RULE_end = 22
    RULE_small_stmt = 23
    RULE_testlist_star_expr = 24
    RULE_star_expr = 25
    RULE_assign_part = 26
    RULE_assignop = 27
    RULE_exprlist = 28
    RULE_import_as_names = 29
    RULE_import_as_name = 30
    RULE_dotted_as_names = 31
    RULE_dotted_as_name = 32
    RULE_test = 33
    RULE_varargslist = 34
    RULE_vardef_parameters = 35
    RULE_vardef_parameter = 36
    RULE_varargs = 37
    RULE_varkwargs = 38
    RULE_logical_test = 39
    RULE_comparison = 40
    RULE_expr = 41
    RULE_exprOp = 42
    RULE_atom = 43
    RULE_dictorsetmaker = 44
    RULE_testlist_comp = 45
    RULE_testlist = 46
    RULE_dotted_name = 47
    RULE_name = 48
    RULE_number = 49
    RULE_integer = 50
    RULE_yield_expr = 51
    RULE_yield_arg = 52
    RULE_trailer = 53
    RULE_arguments = 54
    RULE_arglist = 55
    RULE_argument = 56
    RULE_subscriptlist = 57
    RULE_subscript = 58
    RULE_sliceop = 59
    RULE_comp_for = 60
    RULE_comp_iter = 61

    ruleNames =  [ "root", "single_input", "file_input", "eval_input", "stmt", 
                   "compound_stmt", "suite", "decorator", "elif_clause", 
                   "else_clause", "finally_clause", "with_item", "except_clause", 
                   "classdef", "funcdef", "typedargslist", "args", "kwargs", 
                   "def_parameters", "def_parameter", "named_parameter", 
                   "simple_stmt", "end", "small_stmt", "testlist_star_expr", 
                   "star_expr", "assign_part", "assignop", "exprlist", "import_as_names", 
                   "import_as_name", "dotted_as_names", "dotted_as_name", 
                   "test", "varargslist", "vardef_parameters", "vardef_parameter", 
                   "varargs", "varkwargs", "logical_test", "comparison", 
                   "expr", "exprOp", "atom", "dictorsetmaker", "testlist_comp", 
                   "testlist", "dotted_name", "name", "number", "integer", 
                   "yield_expr", "yield_arg", "trailer", "arguments", "arglist", 
                   "argument", "subscriptlist", "subscript", "sliceop", 
                   "comp_for", "comp_iter" ]

    EOF = Token.EOF
    INDENT=1
    DEDENT=2
    LINE_BREAK=3
    DEF=4
    RETURN=5
    RAISE=6
    FROM=7
    IMPORT=8
    NONLOCAL=9
    AS=10
    GLOBAL=11
    ASSERT=12
    IF=13
    ELIF=14
    ELSE=15
    WHILE=16
    FOR=17
    IN=18
    TRY=19
    NONE=20
    FINALLY=21
    WITH=22
    EXCEPT=23
    LAMBDA=24
    OR=25
    AND=26
    NOT=27
    IS=28
    CLASS=29
    YIELD=30
    DEL=31
    PASS=32
    CONTINUE=33
    BREAK=34
    ASYNC=35
    AWAIT=36
    PRINT=37
    EXEC=38
    TRUE=39
    FALSE=40
    DOT=41
    ELLIPSIS=42
    REVERSE_QUOTE=43
    STAR=44
    COMMA=45
    COLON=46
    SEMI_COLON=47
    POWER=48
    ASSIGN=49
    OR_OP=50
    XOR=51
    AND_OP=52
    LEFT_SHIFT=53
    RIGHT_SHIFT=54
    ADD=55
    MINUS=56
    DIV=57
    MOD=58
    IDIV=59
    NOT_OP=60
    LESS_THAN=61
    GREATER_THAN=62
    EQUALS=63
    GT_EQ=64
    LT_EQ=65
    NOT_EQ_1=66
    NOT_EQ_2=67
    AT=68
    ARROW=69
    ADD_ASSIGN=70
    SUB_ASSIGN=71
    MULT_ASSIGN=72
    AT_ASSIGN=73
    DIV_ASSIGN=74
    MOD_ASSIGN=75
    AND_ASSIGN=76
    OR_ASSIGN=77
    XOR_ASSIGN=78
    LEFT_SHIFT_ASSIGN=79
    RIGHT_SHIFT_ASSIGN=80
    POWER_ASSIGN=81
    IDIV_ASSIGN=82
    STRING=83
    DECIMAL_INTEGER=84
    OCT_INTEGER=85
    HEX_INTEGER=86
    BIN_INTEGER=87
    IMAG_NUMBER=88
    FLOAT_NUMBER=89
    OPEN_PAREN=90
    CLOSE_PAREN=91
    OPEN_BRACE=92
    CLOSE_BRACE=93
    OPEN_BRACKET=94
    CLOSE_BRACKET=95
    NAME=96
    LINE_JOIN=97
    NEWLINE=98
    WS=99
    COMMENT=100

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PythonParser.EOF, 0)

        def single_input(self):
            return self.getTypedRuleContext(PythonParser.Single_inputContext,0)


        def file_input(self):
            return self.getTypedRuleContext(PythonParser.File_inputContext,0)


        def eval_input(self):
            return self.getTypedRuleContext(PythonParser.Eval_inputContext,0)


        def getRuleIndex(self):
            return PythonParser.RULE_root

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoot" ):
                listener.enterRoot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoot" ):
                listener.exitRoot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = PythonParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 124
                self.single_input()

            elif la_ == 2:
                self.state = 125
                self.file_input()

            elif la_ == 3:
                self.state = 126
                self.eval_input()


            self.state = 129
            self.match(PythonParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Single_inputContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self):
            return self.getToken(PythonParser.NEWLINE, 0)

        def simple_stmt(self):
            return self.getTypedRuleContext(PythonParser.Simple_stmtContext,0)


        def compound_stmt(self):
            return self.getTypedRuleContext(PythonParser.Compound_stmtContext,0)


        def getRuleIndex(self):
            return PythonParser.RULE_single_input

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSingle_input" ):
                listener.enterSingle_input(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSingle_input" ):
                listener.exitSingle_input(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingle_input" ):
                return visitor.visitSingle_input(self)
            else:
                return visitor.visitChildren(self)




    def single_input(self):

        localctx = PythonParser.Single_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_single_input)
        try:
            self.state = 136
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PythonParser.NEWLINE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.match(PythonParser.NEWLINE)
                pass
            elif token in [PythonParser.RETURN, PythonParser.RAISE, PythonParser.FROM, PythonParser.IMPORT, PythonParser.NONLOCAL, PythonParser.GLOBAL, PythonParser.ASSERT, PythonParser.NONE, PythonParser.LAMBDA, PythonParser.NOT, PythonParser.YIELD, PythonParser.DEL, PythonParser.PASS, PythonParser.CONTINUE, PythonParser.BREAK, PythonParser.AWAIT, PythonParser.PRINT, PythonParser.EXEC, PythonParser.TRUE, PythonParser.FALSE, PythonParser.ELLIPSIS, PythonParser.REVERSE_QUOTE, PythonParser.STAR, PythonParser.ADD, PythonParser.MINUS, PythonParser.NOT_OP, PythonParser.STRING, PythonParser.DECIMAL_INTEGER, PythonParser.OCT_INTEGER, PythonParser.HEX_INTEGER, PythonParser.BIN_INTEGER, PythonParser.IMAG_NUMBER, PythonParser.FLOAT_NUMBER, PythonParser.OPEN_PAREN, PythonParser.OPEN_BRACE, PythonParser.OPEN_BRACKET, PythonParser.NAME]:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.simple_stmt()
                pass
            elif token in [PythonParser.DEF, PythonParser.IF, PythonParser.WHILE, PythonParser.FOR, PythonParser.TRY, PythonParser.WITH, PythonParser.CLASS, PythonParser.ASYNC, PythonParser.AT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 133
                self.compound_stmt()
                self.state = 134
                self.match(PythonParser.NEWLINE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class File_inputContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.NEWLINE)
            else:
                return self.getToken(PythonParser.NEWLINE, i)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.StmtContext)
            else:
                return self.getTypedRuleContext(PythonParser.StmtContext,i)


        def getRuleIndex(self):
            return PythonParser.RULE_file_input

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFile_input" ):
                listener.enterFile_input(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFile_input" ):
                listener.exitFile_input(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFile_input" ):
                return visitor.visitFile_input(self)
            else:
                return visitor.visitChildren(self)




    def file_input(self):

        localctx = PythonParser.File_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_file_input)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 140
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [PythonParser.NEWLINE]:
                    self.state = 138
                    self.match(PythonParser.NEWLINE)
                    pass
                elif token in [PythonParser.DEF, PythonParser.RETURN, PythonParser.RAISE, PythonParser.FROM, PythonParser.IMPORT, PythonParser.NONLOCAL, PythonParser.GLOBAL, PythonParser.ASSERT, PythonParser.IF, PythonParser.WHILE, PythonParser.FOR, PythonParser.TRY, PythonParser.NONE, PythonParser.WITH, PythonParser.LAMBDA, PythonParser.NOT, PythonParser.CLASS, PythonParser.YIELD, PythonParser.DEL, PythonParser.PASS, PythonParser.CONTINUE, PythonParser.BREAK, PythonParser.ASYNC, PythonParser.AWAIT, PythonParser.PRINT, PythonParser.EXEC, PythonParser.TRUE, PythonParser.FALSE, PythonParser.ELLIPSIS, PythonParser.REVERSE_QUOTE, PythonParser.STAR, PythonParser.ADD, PythonParser.MINUS, PythonParser.NOT_OP, PythonParser.AT, PythonParser.STRING, PythonParser.DECIMAL_INTEGER, PythonParser.OCT_INTEGER, PythonParser.HEX_INTEGER, PythonParser.BIN_INTEGER, PythonParser.IMAG_NUMBER, PythonParser.FLOAT_NUMBER, PythonParser.OPEN_PAREN, PythonParser.OPEN_BRACE, PythonParser.OPEN_BRACKET, PythonParser.NAME]:
                    self.state = 139
                    self.stmt()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 142 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PythonParser.DEF) | (1 << PythonParser.RETURN) | (1 << PythonParser.RAISE) | (1 << PythonParser.FROM) | (1 << PythonParser.IMPORT) | (1 << PythonParser.NONLOCAL) | (1 << PythonParser.GLOBAL) | (1 << PythonParser.ASSERT) | (1 << PythonParser.IF) | (1 << PythonParser.WHILE) | (1 << PythonParser.FOR) | (1 << PythonParser.TRY) | (1 << PythonParser.NONE) | (1 << PythonParser.WITH) | (1 << PythonParser.LAMBDA) | (1 << PythonParser.NOT) | (1 << PythonParser.CLASS) | (1 << PythonParser.YIELD) | (1 << PythonParser.DEL) | (1 << PythonParser.PASS) | (1 << PythonParser.CONTINUE) | (1 << PythonParser.BREAK) | (1 << PythonParser.ASYNC) | (1 << PythonParser.AWAIT) | (1 << PythonParser.PRINT) | (1 << PythonParser.EXEC) | (1 << PythonParser.TRUE) | (1 << PythonParser.FALSE) | (1 << PythonParser.ELLIPSIS) | (1 << PythonParser.REVERSE_QUOTE) | (1 << PythonParser.STAR) | (1 << PythonParser.ADD) | (1 << PythonParser.MINUS) | (1 << PythonParser.NOT_OP))) != 0) or ((((_la - 68)) & ~0x3f) == 0 and ((1 << (_la - 68)) & ((1 << (PythonParser.AT - 68)) | (1 << (PythonParser.STRING - 68)) | (1 << (PythonParser.DECIMAL_INTEGER - 68)) | (1 << (PythonParser.OCT_INTEGER - 68)) | (1 << (PythonParser.HEX_INTEGER - 68)) | (1 << (PythonParser.BIN_INTEGER - 68)) | (1 << (PythonParser.IMAG_NUMBER - 68)) | (1 << (PythonParser.FLOAT_NUMBER - 68)) | (1 << (PythonParser.OPEN_PAREN - 68)) | (1 << (PythonParser.OPEN_BRACE - 68)) | (1 << (PythonParser.OPEN_BRACKET - 68)) | (1 << (PythonParser.NAME - 68)) | (1 << (PythonParser.NEWLINE - 68)))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Eval_inputContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def testlist(self):
            return self.getTypedRuleContext(PythonParser.TestlistContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.NEWLINE)
            else:
                return self.getToken(PythonParser.NEWLINE, i)

        def getRuleIndex(self):
            return PythonParser.RULE_eval_input

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEval_input" ):
                listener.enterEval_input(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEval_input" ):
                listener.exitEval_input(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEval_input" ):
                return visitor.visitEval_input(self)
            else:
                return visitor.visitChildren(self)




    def eval_input(self):

        localctx = PythonParser.Eval_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_eval_input)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.testlist()
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PythonParser.NEWLINE:
                self.state = 145
                self.match(PythonParser.NEWLINE)
                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PythonParser.RULE_stmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class CompoundStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def compound_stmt(self):
            return self.getTypedRuleContext(PythonParser.Compound_stmtContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompoundStmt" ):
                listener.enterCompoundStmt(self)
